--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Groco - The Grocery App</title>
     <!-- Font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- Css Sheet -->
@@ -432,7 +432,7 @@
             </div>
         </div>
 
-        <div class="credit">created by <span>WebDevRC</span> &copy; rights reserved</div>
+        <div class="credit">Created by <span>Rishabh Chaudhary</span> &copy; rights reserved</div>
 
     </section>
 
